<resources>
    <string name="app_name">HealtHeaven</string>
    <string name="login">Login</string>
    <string name="please_fill_in_the_credentials">Please fill in the credentials</string>
    <string name="todo">TODO</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered">Not Registered?</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_you_email_address_or_phone_number_linked_with_this_account">Enter you email address or phone number linked with this account</string>
    <string name="enter_email_address_mobile_number">Enter Email Address/Mobile Number</string>
    <string name="send">Send</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_verification_code_we_sent_to_your_mobile_number">Please enter the verification code we sent to your mobile number</string>
    <string name="_9054216535">9054216535</string>
    <string name="_4">4</string>
    <string name="not_recieved_code">Not received code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="create_new_password">Create New password</string>
    <string name="set_up_your_new_password">Set up your new password !</string>
    <string name="reset">Reset</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_fill_in_the_details">Please fill in the details</string>
    <string name="or_sign_up_using">or sign up using</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="_44">+44</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="gender">Gender</string>
    <string name="select">Select</string>
    <string name="dob">DOB</string>
    <string name="enter_your_date_of_birth">Select Your Date of Birth</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good Morning,</string>
    <string name="karolina">Karolina</string>
    <string name="search_for_symtomps">Search for symtomps</string>
    <string name="need_a_consultation_from_our_top_doctors_and_get_well_soon">Need A Consultation from our top doctors and get well soon ?</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="categories">Categories</string>
    <string name="heart">Heart</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="dr_jessica_fernandez">Dr. Jessica Fernandez</string>
    <string name="neurosurgeon">Neurosurgeon</string>
    <string name="_10_am_4_pm">10 AM - 4 PM</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="arkell_charles">Arkell Charles</string>
    <string name="personal_details">Personal Details</string>
    <string name="clinical_records">Clinical Records</string>
    <string name="my_downloads">My Downloads</string>
    <string name="membership">Membership</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_details">Profile Details</string>
    <string name="my_gp">My GP</string>
    <string name="exemptions">Exemptions</string>
    <string name="medications_based">Medications Based</string>
    <string name="allergy_history">Allergy History</string>
    <string name="investigation">Investigation</string>
    <string name="family_history">Family History</string>
    <string name="no_allergy_added">No Allergy Added</string>
    <string name="to_add_allergy_tap_on_button">To add Allergy, Tap on button</string>
    <string name="no_investigation_added">No Investigation Added</string>
    <string name="to_add_investigation_tap_on_button">To add investigation, Tap on button</string>
    <string name="no_family_history_added">No Family History Added</string>
    <string name="to_add_family_history_tap_on_button">To add Family History, Tap on button</string>
    <string name="add_family_history">Add Family History</string>
    <string name="prescription">Prescription</string>
    <string name="fit_note">Fit Note</string>
    <string name="referral">Referral</string>
    <string name="others_notes">Others Notes</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="update">Update</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="location">Location</string>
    <string name="location_services">Location Services</string>
    <string name="turn_on_location_service_to_enable_it">Turn on Location Service to enable it.</string>
    <string name="text_message">Text Message</string>
    <string name="send_me_text_messages_about_alldaydr_promotions_special_offers_and_updates">Send me text messages about alldaydr promotions, special offers and updates</string>
    <string name="email">Email</string>
    <string name="send_me_emails_about_alldaydr_promotions_special_offers_and_updates">Send me emails about alldaydr promotions,special offers and updates</string>
    <string name="phone">Phone</string>
    <string name="call_me_about_alldaydr_promotions_special_offers_and_updates">Call me about alldaydr promotions, special offers and updates</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="send_me_push_notifications_from_alldaydr">Send me Push Notifications from alldaydr</string>
    <string name="touch_id_or_face_id">Touch ID or Face ID</string>
    <string name="send_me_promotions_special_offers_and_updates_from_carefully_selected_third_party_companies">Send me promotions, special offers and updates from carefully selected third party companies</string>
    <string name="add">Add</string>
    <string name="add_allergy">Add Allergy</string>
    <string name="active_currently">Active Currently</string>
    <string name="save_allergy">Save Allergy</string>
    <string name="food_allerdy_diet">Food allerdy diet</string>
    <string name="dcis_nucler_pleomorphim">DCIS nucler pleomorphim</string>
    <string name="quilonia_ethiopica">Quilonia Ethiopica</string>
    <string name="neoplasm_of_stomach">Neoplasm of Stomach</string>
    <string name="add_investigation">Add Investigation</string>
    <string name="investigation_name">Investigation Name</string>
    <string name="description">Description</string>
    <string name="arkell">Arkell</string>
    <string name="charles">Charles</string>
    <string name="abc123_gmail_com">abc123@gmail.com</string>
    <string name="phone_no">Phone No.</string>
    <string name="_64_389_4321_333">+ 64 389–4321–333</string>
    <string name="_26_03_1983">26 / 03 / 1983</string>
    <string name="height">Height</string>
    <string name="_5_ft_8_in">5 ft 8 in</string>
    <string name="_64kg">64kg</string>
    <string name="weight">Weight</string>
    <string name="_20_78_normal_healthy_weight">20.78 Normal (Healthy Weight)</string>
    <string name="bmi">BMI</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="low_90_60_or_below">Low - 90/60 or below</string>
    <string name="edit">Edit</string>
    <string name="no_gp_service_found">No GP Service Found</string>
    <string name="you_have_not_added_any_gp_service_yet_to_add_tap_on_button">You have not added any GP service yet To add Tap on button</string>
    <string name="add_gp_service">Add GP Service</string>
    <string name="search_gp">Search GP</string>
    <string name="no_exemptions_certificate_found">No Exemptions Certificate Found</string>
    <string name="you_have_not_added_any_exemptions_certificate_yet_to_add_tap_on_button">You have not added any Exemptions certificate yet To add Tap on button</string>
    <string name="save_family_history">Save Family History</string>
    <string name="hemoglobin_manitaba">Hemoglobin manitaba</string>
    <string name="knee_replacing">Knee replacing</string>
    <string name="repair_of_joint_capsule_of_knee">Repair of joint capsule of knee</string>
    <string name="no_medication_issued">No Medication Issued</string>
    <string name="issued_medication_will_appear_here">Issued Medication will appear here</string>
    <string name="medication_issued">Medication Issued</string>
    <string name="reset_successfully">Reset Successfully !</string>
    <string name="your_password_has_been_reset_successfully">Your Password has been reset successfully</string>
    <string name="specialists">Specialists</string>
    <string name="dr_paulina_gayoso">Dr. Paulina Gayoso</string>
    <string name="prescription_sick_notes">Prescription, Sick Notes</string>
    <string name="it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem">It was popularised in the 1960s with the release of Letraset sheets containing Lorem</string>
    <string name="view_profile">View Profile</string>
    <string name="book_session">Book Session</string>
    <string name="no_medical_history">No Medical History</string>
    <string name="to_add_medical_records_tap_on_button">To add Medical records, Tap on button</string>
    <string name="add_medical_history">Add Medical History</string>
    <string name="medical_history">Medical History</string>
    <string name="add_disease_name">Add Disease Name</string>
    <string name="select_disease_name">Select Disease Name</string>
    <string name="jugular_lymphadenopathy">Jugular lymphadenopathy</string>
    <string name="neoplasm_of_junctional_region_of_epiglottis">Neoplasm of junctional region of epiglottis</string>
    <string name="start_date">Start Date:</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="end_date">End Date:</string>
    <string name="save_diseases">Save Diseases</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="booked_successfully">Booked Successfully !</string>
    <string name="thank_you_for_booking_session_with_us">Thank you for booking session with us</string>
    <string name="you_can_review_your_booked_session_in_my_session_option">You can review your booked session in My Session option</string>
    <string name="done">Done</string>
    <string name="_continue">Continue</string>
    <string name="verified">Verified!</string>
    <string name="your_identity_is_successfully_verified">Your Identity is successfully verified</string>
</resources>