<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:layout_marginTop="126dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_24"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/booked_successfully"
        android:textColor="@color/white"
        android:textSize="@dimen/font_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_16"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/thank_you_for_booking_session_with_us"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />

    <TextView
        android:layout_width="277dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/you_can_review_your_booked_session_in_my_session_option"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="132dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/default_button"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:foreground="@drawable/effect_button"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="@dimen/font_12" />

</LinearLayout>