<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.verificationdocument.activities.VerifiedActivity">

    <ImageView
        android:layout_width="87dp"
        android:layout_height="106dp"
        android:layout_gravity="center"
        android:layout_marginTop="141dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_verified" />

    <TextView
        android:id="@+id/tvVerified"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/verified"
        android:textSize="@dimen/font_20"
        android:textColor="@color/green"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/your_identity_is_successfully_verified"
        android:textSize="@dimen/font_16"
        android:textColor="@color/aapBlack"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="132dp"
        android:layout_height="34dp"
        android:textColor="@color/white"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/font_12"/>
</LinearLayout>